* TODO: Add option to dump full request/response output to a file by client
* TODO: review cooking handling. Not always sent automatically. 
* TODO: review :variables in URI elements
* TODO: Stella::Testrun (no local analog for runid so it's set by the service)
* TODO: global responses


#### 0.8.0 (2009-12-??) ###############################

* FIXED: HTTP auth failures
* FIXED: Request timeouts should count towards failures
* FIXED: Stella::Client ID was changing between requests in certain conditions
* FIXED: HTTP delete now works correctly
* FIXED: Missing rsequential method in Container
* FIXED: Don't override specified user agent header
* CHANGE: A proper message displayed when no host specified
* CHANGE: Don't append httpclient info to User-Agent header
* ADDED: follow responses can contain definition blocks
* ADDED: Support for specifying default path prefix on CLI
* ADDED: Support for specifying timeouts


* TODO: Replace runtime procs with string templates
  * TODO: Look into ERB template issue. Call ERB.new before test starts. 


#### 0.7.7 (2009-12-05) ###############################

* FIXED: JSON parse error when nil body 
* FIXED: URI query parameter encoding
* CHANGE: Removed Stella::Testplan::Stats
* CHANGE: Better output for errors during functional tests
* CHANGE: Global variables now implemented in Stella::Testplan.global
  and can be used like usecase and request resources.
* CHANGE: Variable replacement now checks the client container 
  resources before the usecase resources. 
* ADDED: Stella::Testplan#to_json
* ADDED: Stella::Data::Helpers#read_file
* ADDED: Stella::Data::Helpers#resequential
* ADDED: Stella::Data::Helpers#path
* ADDED: no-param, no-header options
* ADDED: Follow redirects within one request definition
* ADDED: Support for specifying HTTP AUTH domain in usecase config 


#### 0.7.6 (2009-11-24) ###############################
