@@ -208,149 +208,6 @@ module Stella::Data
       end
     end
     
-    ###
-    ### Disabled b/c it doesn't work anymore since a  
-    ### new Container is created for every repetition. 
-    ###
-    ##def sequential(*args)
-    ##  if Symbol === args.first
-    ##    input, index = *args
-    ##  elsif Array === args.first || args.size == 1
-    ##    input = args.first
-    ##  else
-    ##    input = args
-    ##  end
-    ##  Proc.new do
-    ##    if @sequential_value[input]
-    ##      value = @sequential_value[input]
-    ##    else
-    ##      value = case input.class.to_s
-    ##      when "Symbol"
-    ##        ret = resource(input)
-    ##        ret
-    ##      when "Array"
-    ##        input
-    ##      when "Range"
-    ##        input.to_a
-    ##      when "Proc"
-    ##        input.call
-    ##      end
-    ##      digest = value.object_id
-    ##      @sequential_offset ||= {}
-    ##      @sequential_offset[digest] ||= 0
-    ##      Stella.ld "SEQVALUES: #{@sequential_offset.object_id} #{value.inspect} #{@sequential_offset[digest]}"
-    ##      if value.is_a?(Array)
-    ##        size = value.size
-    ##        @sequential_offset[digest] = 0 if @sequential_offset[digest] >= size
-    ##        value = value[ @sequential_offset[digest] ] 
-    ##        Stella.stdout.info "WHAY: #{value} (#{@sequential_offset[digest]})"
-    ##        @sequential_offset[digest] += 1
-    ##      end
-    ##      Stella.ld "SELECTED: #{value}"
-    ##      @sequential_value[input] = value
-    ##    end
-    ##    # The resource may be an Array of Arrays (e.g. a CSV file)
-    ##    if value.is_a?(Array) && !index.nil?
-    ##      value = value[ index ] 
-    ##      Stella.ld "SELECTED INDEX: #{index} #{value.inspect} "
-    ##    end
-    ##    value
-    ##  end
-    ##end
-    ##
-    ##def rsequential(*args)
-    ##  if Symbol === args.first
-    ##    input, index = *args
-    ##  elsif Array === args.first || args.size == 1
-    ##    input = args.first
-    ##  else
-    ##    input = args
-    ##  end
-    ##  Proc.new do
-    ##    if @rsequential_value[input.digest]
-    ##      value = @rsequential_value[input.digest]
-    ##    else
-    ##      value = case input.class.to_s
-    ##      when "Symbol"
-    ##        ret = resource(input)
-    ##        ret
-    ##      when "Array"
-    ##        input
-    ##      when "Range"
-    ##        input.to_a
-    ##      when "Proc"
-    ##        input.call
-    ##      end
-    ##      digest = value.object_id
-    ##      @rsequential_offset ||= {}
-    ##      Stella.ld "RSEQVALUES: #{input} #{value.inspect}"
-    ##      if value.is_a?(Array)
-    ##        size = value.size
-    ##        @rsequential_offset[digest] ||= size-1 
-    ##        @rsequential_offset[digest] = size-1 if @rsequential_offset[digest] < 0
-    ##        value = value[ @rsequential_offset[digest] ] 
-    ##        @rsequential_offset[digest] -= 1
-    ##      end
-    ##      Stella.ld "SELECTED: #{value}"
-    ##      @rsequential_value[input.digest] = value
-    ##    end
-    ##    
-    ##    # The resource may be an Array of Arrays (e.g. a CSV file)
-    ##    if value.is_a?(Array) && !index.nil?
-    ##      value = value[ index ] 
-    ##      Stella.ld "SELECTED INDEX: #{index} #{value.inspect} "
-    ##    end
-    ##    
-    ##    value
-    ##  end
-    ##end
-    
-    
-    
-    # NOTE: This is global across all users
-    ## TODO: Broken??
-    ##def rsequential(*args)
-    ##  if Symbol === args.first
-    ##    input, index = *args
-    ##  elsif Array === args.first || args.size == 1
-    ##    input = args.first
-    ##  else
-    ##    input = args
-    ##  end
-    ##  Proc.new do
-    ##    if @rsequential_value[input.object_id]
-    ##      value = @rsequential_value[input.object_id]
-    ##    else
-    ##      value = case input.class.to_s
-    ##      when "Symbol"
-    ##        ret = resource(input)
-    ##        ret
-    ##      when "Array"
-    ##        input
-    ##      when "Range"
-    ##        input.to_a
-    ##      when "Proc"
-    ##        input.call
-    ##      end
-    ##      digest = value.object_id
-    ##      if value.is_a?(Array)
-    ##        index = Stella::Client::Container.rsequential_offset(digest, value.size-1)
-    ##        value = value[ index ] 
-    ##      end
-    ##      Stella.ld "SELECTED(RSEQ): #{value} #{index} #{input} #{digest}"
-    ##      # I think this needs to be updated for global_rsequential:
-    ##      @rsequential_value[input.object_id] = value
-    ##    end
-    ##    
-    ##    # The resource may be an Array of Arrays (e.g. a CSV file)
-    ##    if value.is_a?(Array) && !index.nil?
-    ##      value = value[ index ] 
-    ##      Stella.ld "SELECTED INDEX: #{index} #{value.inspect} #{input} #{digest}"
-    ##    end
-    ##    
-    ##    value
-    ##  end
-    ##end
   end
       
 end
