@@ -13,6 +13,9 @@ STELLA, CHANGES
 
 #### 0.8.0 (2009-12-??) ###############################
 
+NOTE: The configuration language changed slightly in this release. 
+See the README for more information on what needs to be updated. 
+
 * FIXED: HTTP auth failures
 * FIXED: Request timeouts should count towards failures
 * FIXED: Stella::Client ID was changing between requests in certain conditions
@@ -21,6 +24,7 @@ STELLA, CHANGES
 * FIXED: Don't override specified user agent header
 * CHANGE: A proper message displayed when no host specified
 * CHANGE: Don't append httpclient info to User-Agent header
+* CHANGE: Proc values are no longer supported in configuration (params and headers)
 * ADDED: follow responses can contain definition blocks
 * ADDED: Support for specifying default path prefix on CLI
 * ADDED: Support for specifying timeouts
